<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    android:orientation="vertical"
    android:weightSum="10">

    <TextView
        android:id="@+id/shopping_userName"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

    </TextView>


    <ListView
        android:id="@+id/shopping_listView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7">

    </ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/item_editText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="Add a new item"/>

        <Button
            android:id="@+id/add_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Add"/>
    </LinearLayout>

    <Button
        android:id="@+id/btnClear"
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="1"
        android:background="@drawable/ic_launcher_background"
        android:onClick="ClearShoppingListNetworked"
        android:text="Clear" />


</LinearLayout>